--- a/Blue.html
+++ b/Blue.html
@@ -24,7 +24,7 @@
         margin: 0 auto;
         width: 100vw;
         height: 100vh;
-        background: linear-gradient(45deg, #12ad67, #2ec983, #12ad67);
+        background: linear-gradient(45deg, #1d61fd, #5387ff, #1d61fd);
       }
 
       .card {
@@ -42,12 +42,12 @@
         content: "";
         width: 10px;
         height: 8.85px;
-        background: #2ec983;
+        background: #5387ff;
         border-radius: 100%;
         right: 0;
         top: 218px;
         transform: translate(50%, -50%);
-        box-shadow: inset 5px 0 20px rgba(136, 103, 103, 0.05);
+        box-shadow: inset 5px 0 20px rgb(0, 0, 0, 0.05);
       }
 
       .card:before {
@@ -55,19 +55,19 @@
         content: "";
         width: 10px;
         height: 8.85px;
-        background: #2ec983;
+        background: #5387ff;
         border-radius: 100%;
         left: 0;
         top: 218px;
         transform: translate(-50%, -50%);
-        box-shadow: inset -5px 0 20px rgb(0, 0, 0, 0.05);
+        box-shadow: inset -5px 0 20px rgba(163, 123, 123, 0.05);
       }
 
       .staff {
         margin: 0;
         padding: 24px;
         width: 100%;
-        color: #0e771d;
+        color: #0635a0;
       }
 
       .staff ul {
@@ -104,7 +104,7 @@
       .Covid-19 {
         padding: 8px 20px 32px 20px;
         width: 100%;
-        background: rgba(46, 201, 131, 10%);
+        background: rgba(80, 135, 255, 10%);
       }
 
       .Covid-19 .colum {
@@ -154,7 +154,7 @@
         display: block;
         width: 180px;
         height: 180px;
-        background: linear-gradient(#0ec791, #249f37);
+        background: linear-gradient(135deg, #598ff7, #0063f9);
         color: #fff;
         border-radius: 100%;
       }
@@ -168,7 +168,7 @@
 
       .footer {
         height: 48px;
-        background: #0e771d;
+        background: #0635a0;
         padding: 16px;
         text-align: center;
         color: white;
@@ -231,7 +231,7 @@
           loop: true,
           autoplay: true,
           //initialSegment: [0, 1140],
-          path: path + "icon01new3.json",
+          path: path + "icon02new3.json",
         });
     </script>
   </body>
