--- a/Purple.html
+++ b/Purple.html
@@ -12,7 +12,9 @@
 
       body {
         margin: auto;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+          "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         background: #000;
       }
 
@@ -32,7 +34,7 @@
         margin: 12px 20px;
         width: 374px;
         height: auto;
-        background: #521291;
+        background: linear-gradient(135deg, #521291, #6133e4);
         border-radius: 10px;
         box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
       }
@@ -102,7 +104,7 @@
       }
 
       .Covid-19 {
-        padding: 8px 20px 32px 20px;
+        padding: 8px 20px;
         width: 100%;
         background: #f2f2ff;
       }
@@ -132,7 +134,7 @@
         line-height: 26px;
         font-size: 20px;
         color: #3c3c3c;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .Covid-19 .colum .data span {
@@ -145,12 +147,12 @@
         line-height: 26px;
         font-size: 16px;
         color: #3c3c3c;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .Covid-19 .stamp {
         position: relative;
-        margin: 32px auto 0 auto;
+        margin: 8px auto 0 auto;
         display: block;
         width: 180px;
         height: 180px;
@@ -212,7 +214,9 @@
           </div>
         </div>
 
-        <div class="footer">本日已完成自主健康回報，為入廠提報人員且符合快篩條件</div>
+        <div class="footer">
+          本日已完成自主健康回報，為入廠提報人員且符合快篩條件
+        </div>
       </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script>
