--- a/Blue.html
+++ b/Blue.html
@@ -12,7 +12,7 @@
 
       body {
         margin: auto;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         background: #000;
       }
 
@@ -102,7 +102,7 @@
       }
 
       .Covid-19 {
-        padding: 8px 20px 32px 20px;
+        padding: 8px 20px;
         width: 100%;
         background: rgba(80, 135, 255, 10%);
       }
@@ -132,25 +132,25 @@
         line-height: 26px;
         font-size: 20px;
         color: #3c3c3c;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .Covid-19 .colum .data span {
         display: inline-block;
         padding: 0 4px;
-        font-weight: 700;
+        font-weight: bold;
       }
 
       .Covid-19 .colum .date {
         line-height: 26px;
         font-size: 16px;
         color: #3c3c3c;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .Covid-19 .stamp {
         position: relative;
-        margin: 32px auto 0 auto;
+        margin: 8px auto 0 auto;
         display: block;
         width: 180px;
         height: 180px;
@@ -168,8 +168,9 @@
 
       .footer {
         height: 48px;
+        line-height: 18px;
         background: #0635a0;
-        padding: 16px;
+        padding: 16px 0;
         text-align: center;
         color: white;
         border-radius: 0 0 10px 10px;
