--- a/Orange.html
+++ b/Orange.html
@@ -12,7 +12,7 @@
 
       body {
         margin: auto;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         background: #000;
       }
 
@@ -102,7 +102,7 @@
       }
 
       .Covid-19 {
-        padding: 8px 20px 32px 20px;
+        padding: 8px 20px;
         width: 100%;
         background: rgba(255, 156, 62, 10%);
       }
@@ -132,7 +132,7 @@
         line-height: 26px;
         font-size: 20px;
         color: #3c3c3c;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .Covid-19 .colum .data span {
@@ -145,12 +145,12 @@
         line-height: 26px;
         font-size: 16px;
         color: #3c3c3c;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .Covid-19 .stamp {
         position: relative;
-        margin: 32px auto 0 auto;
+        margin: 8px auto 0 auto;
         display: block;
         width: 180px;
         height: 180px;
