--- a/Blue.html
+++ b/Blue.html
@@ -12,7 +12,9 @@
 
       body {
         margin: auto;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+          "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         background: #000;
       }
 
@@ -92,7 +94,7 @@
       }
 
       .staff .data {
-        font-size: 42px;
+        font-size: 40px;
         font-weight: 700;
         line-height: 56px;
       }
